# MovieBase

./: CMakeLists.txt  Readme.md
app/: main.cpp
core/: models.h
data/: casting.csv  movies.csv  persons.csv
importer/: csv_importer.cpp  csv_importer.h
include/: csv_loader.h  db_utils.h  models.h
service/: movie_repository.cpp  movie_repository.h  movie_service.cpp  movie_service.h
src/: csv_loader.cpp  db_utils.cpp  main.cpp
ui/: main_window.cpp  main_window.h  movie_table_model.cpp  movie_table_model.h
